<resources>
    <string name="app_name">Story Book Library</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="book_library">Book Library</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="detail">Details</string>
    <string name="successfully_added">Successfully added!</string>
    <string name="please_fill_out_all_fields">Please fill out all fields</string>


    <!--  Sample Title & Description  -->

    <string name="story_title">Lorem ipsum dolor</string>
    <string name="story_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </string>
    <string name="story_summary">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\nDuis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Excepteur sint occaecat cupidatat non proident,
                            sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


<!--  Content Description  -->
    <string name="fab_content_desc">Floating Action Button</string>
    <string name="add_button_desc">Add Button</string>
    <string name="edit_button_desc">Edit Button</string>
    <string name="update_button_desc">Update Button</string>
    <string name="favourite_button_desc">Favourite Button</string>
    <string name="delete_button_desc">Delete Button</string>
    <string name="back_button_desc">Navigate back to the main menu</string>
    <string name="cover_image_desc">Cover Image</string>
    <string name="summary">Summary</string>
    <string name="author">Author</string>
    <string name="tags">Tags</string>
    <string name="category">Category</string>
</resources>